--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -272,7 +272,7 @@ nav {
 }
 
 .forecast-icons-box i {
-    color: var(--jet-black);
+    color: var(--almost-white);
     font-size: 3em;
     padding: .5em .25em;
 }
